tests/negative/struct_array_param.ax
module struct_array_param;

struct Buffer {
    data: [4]u8;
}

fn bad(buffer: Buffer) -> i32 {
    return 0;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return 0;
}
